<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tv_policy"
        android:textSize="18dp"
        android:lineSpacingExtra="5dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paragraph_1"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp"
            android:text="@string/wwho"
            android:textColor="#000"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paragrahp_2"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="normal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightBlue"
                android:padding="5dp"
                android:paddingLeft="10dp"
                android:text="@string/Grap_buddy_vision"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:textStyle="normal" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:src="@drawable/up_arrow" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/revolution"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/best_industry"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exclusive"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/record_lebel"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opportunities"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/brand_secognition"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="normal" />
    </LinearLayout>
    </LinearLayout>
</ScrollView>