<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginTop="15dp">

    <TextView
        android:textStyle="normal"
        android:textSize="16dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paragraph_1"/>
    <TextView
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:textSize="16dp"
        android:textColor="#000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wwho"/>
    <TextView
        android:textSize="16dp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paragrahp_2"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightBlue"
            android:padding="5dp"
            android:paddingLeft="10dp"
            android:text="@string/Grap_buddy_vision"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:src="@drawable/up_arrow" />
    </RelativeLayout>



</LinearLayout>