<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:background="@drawable/layout_background1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_margin="20dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/registered_emailid"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/registered_emailid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:singleLine="true"
        android:background="@drawable/edittext_back_a"
        android:drawablePadding="8dp"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/white" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/backToLoginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="5dp"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />


    </RelativeLayout>

            <TextView
                android:id="@+id/forgot_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                android:background="@drawable/loginbutton_selector" />
        </LinearLayout>
    </RelativeLayout>
        </RelativeLayout>
</LinearLayout>