<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@drawable/layout_background1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/login_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <EditText
                    android:id="@+id/login_emailid"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_back_a"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="2dp"/>


                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_back_a"
                    android:drawablePadding="8dp"
                    android:gravity="center"
                    android:hint="@string/passowrd"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:paddingBottom="5dp">

                    <CheckBox
                        android:id="@+id/show_hide_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/show_pwd"
                        android:textColor="@color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:padding="5dp"
                        android:text="@string/forgot"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/loginProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/loginBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/loginbutton_selector"
                    android:padding="3dp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/login_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="60sp"
                    android:layout_below="@+id/login_layout"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="5dp"
                    android:src="@drawable/login_facebook" />

            </LinearLayout>

            <TextView
                android:id="@+id/createAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/newUser"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>

